# android-native-template

./: README.md  TEMPLATE.md  init-template.sh  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_main.cpp  native_main.h
app/src/main/cpp/core/: app_state.h  time_utils.cpp  time_utils.h
app/src/main/cpp/platform/: fs.cpp  fs.h  input.cpp  input.h  log.h  proc_maps.cpp  proc_maps.h
app/src/main/cpp/render/: renderer_egl.cpp  renderer_egl.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
